--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_DB_URL=mongodb+srv://torianela:miau3000@mongodbjstest.nljrv.mongodb.net/?retryWrites=true&w=majority&appName=MongoDBJSTest
+MONGO_DB_URL=mongodb+srv://torianela:miau@mongodbjstest.nljrv.mongodb.net/?retryWrites=true&w=majority&appName=MongoDBJSTest
 JWT_SALT=ciobrelis
-PORT=5051
+PORT=999
